--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
       <a href="https://twitter.com/">I tweet</a>
       <a href="https://github.com/">I code</a>
       <a href="mailto:denish.gandhi307@gmail.com">I email</a>
+      
+      <br><br>
+      <iframe src="https://docs.google.com/gview?url=https://github.com/Julo52/Hello/raw/master/Denish%20Gandhi_Resume_NEW.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
     </div>
   </body>
 </html>
