--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <a href="https://twitter.com/">I tweet</a>
       <a href="https://github.com/">I code</a>
       <a href="mailto:denish.gandhi307@gmail.com">I email</a>
-      a href="https://github.com/Julo52/Hello/raw/master/Denish%20Gandhi_Resume_NEW.pdf">My Resume</a>
-      <br><br>
+      <a href="https://github.com/Julo52/Hello/raw/master/Denish%20Gandhi_Resume_NEW.pdf">My Resume</a>
+      
     </div>
   </body>
 </html>
