--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <a href="https://twitter.com/">I tweet</a>
       <a href="https://github.com/">I code</a>
       <a href="mailto:denish.gandhi307@gmail.com">I email</a>
-      <a href="https://github.com/Julo52/Hello/raw/master/Denish%20Gandhi_Resume_NEW.pdf">My Resume</a>
+      <a href="Denish Gandhi_Resume_NEW.pdf">My Resume</a>
       
     </div>
   </body>
