--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <a href="https://github.com/">I code</a>
       <a href="mailto:denish.gandhi307@gmail.com">I email</a>
       <a href="Denish Gandhi_Resume_NEW.pdf">My Resume</a>
-      <a target='_blank' href={require('Denish Gandhi_Resume_NEW.pdf')}>PDF Doc1</a>
-      <a target='_blank' href={require('Hello/Denish Gandhi_Resume_NEW.pdf')}>PDF Doc2</a>
+      <!--<a target='_blank' href={require('Denish Gandhi_Resume_NEW.pdf')}>PDF Doc1</a>
+       <a target='_blank' href={require('Hello/Denish Gandhi_Resume_NEW.pdf')}>PDF Doc2</a> -->
       
     </div>
   </body>
