--- a/index.html
+++ b/index.html
@@ -33,14 +33,10 @@
     <div class="wrap">
       <h2 class="title">Why hello there.</h2>
       <p class="subtitle"><small>It's nice to meet you.</small></p>
-      <p class="main-paragraph">I'm Denish. I build web experiences with modern frontend technologies. When I'm not on the internet, you can find me playiong video games, playing sports, or just generally enjoying the great outdoors.</p>
+      <p class="main-paragraph">I'm Denish. I am a front-end web developer. When I'm not on the internet, you can find me playing video games, playing sports, or just generally enjoying the great outdoors.</p>
 
-      <a href="https://twitter.com/">I tweet</a>
-      <a href="https://github.com/">I code</a>
-      <a href="mailto:denish.gandhi307@gmail.com">I email</a>
-      <a href="Denish Gandhi_Resume_NEW.pdf">My Resume</a>
-      <!--<a target='_blank' href={require('Denish Gandhi_Resume_NEW.pdf')}>PDF Doc1</a>
-       <a target='_blank' href={require('Hello/Denish Gandhi_Resume_NEW.pdf')}>PDF Doc2</a> -->
+      <a href="mailto:denish.gandhi307@gmail.com">Email Me</a>
+      <a href="Denish Gandhi_Resume_NEW.pdf">View my Resume</a>
       
     </div>
   </body>
