--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
   </style>
 </head>
   <body>
-    <h1 class="hide">Hello, I'm Denish Gandhi</h1>
+    <h1 class="hide">Hello, my name is Denish Gandhi</h1>
     <div class="wrap">
       <h2 class="title">Why hello there.</h2>
       <p class="subtitle"><small>It's nice to meet you.</small></p>
       <p class="main-paragraph">I'm Denish. I am a front-end web developer. When I'm not on the internet, you can find me playing video games, playing sports, or just generally enjoying the great outdoors.</p>
 
       <a href="mailto:denish.gandhi307@gmail.com">Email Me</a>
+      <br><br>
       <a href="Denish Gandhi_Resume_NEW.pdf">View my Resume</a>
       
     </div>
