--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <body>
     <h1 class="hide">Hello, my name is Denish Gandhi</h1>
     <div class="wrap">
+      <img src="photo.png" alt="MY FACE" height="42" width="42">
       <h2 class="title">Why hello there.</h2>
       <p class="subtitle"><small>It's nice to meet you.</small></p>
       <p class="main-paragraph">I'm Denish. I am a front-end web developer. When I'm not on the internet, you can find me playing video games, playing sports, or just generally enjoying the great outdoors.</p>
