--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </style>
 </head>
   <body>
-    <h1 class="hide">Hello, my name is Denish Gandhi</h1>
+    <h1>Hello, my name is Denish Gandhi</h1>
     <div class="wrap">
       <img src="photo2.jpg" alt="MY FACE" width="350" height="467">
       <h2 class="title">Why hello there.</h2>
