--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   </style>
 </head>
   <body>
-    <h1>Hello, my name is Denish Gandhi</h1>
-    <div class="wrap">
+      <div class="wrap">
+      <h1>Denish Gandhi</h1>
       <img src="photo2.jpg" alt="MY FACE" width="350" height="467">
       <h2 class="title">Why hello there.</h2>
       <p class="subtitle"><small>It's nice to meet you.</small></p>
-      <p class="main-paragraph">I'm Denish. I am a front-end web developer. When I'm not on the internet, you can find me playing video games, playing sports, or just generally enjoying the great outdoors.</p>
+      <p class="main-paragraph">I am a front-end web developer. When I'm not on the internet, you can find me playing video games, playing sports, or just generally enjoying the great outdoors.</p>
 
       <a href="mailto:denish.gandhi307@gmail.com">Email Me</a>
       <br><br>
