--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <a href="mailto:denish.gandhi307@gmail.com">Email Me</a>
       <br><br>
-      <a href="Denish Gandhi_Resume_NEW.pdf">View my Resume</a>
+      <a href="Resume_Git.pdf">View my Resume</a>
       
     </div>
   </body>
